--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,104 @@ button {
 .header > h1 {
   font-size: 2rem;
 }
+.display {
+  display: flex;
+  width: 100vw;
+  height: 92vh;
+}
+
+.cards {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  justify-content: space-evenly;
+}
+
+.card {
+  margin-right: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card > p {
+  margin: 5px;
+  font-weight: bold;
+}
+
+.card > button {
+  margin-top: 5px;
+}
+
+.button-hold {
+  display: flex;
+}
+
+.button-hold > p {
+  font-size: 1.5rem;
+  margin: 0 5px;
+}
+
+.card > img {
+  width: 180px;
+}
+
+.deck-container {
+  width: 30%;
+  background-color: lightslategrey;
+  position: relative;
+}
+
+.deck {
+  width: 100%;
+  height: 90%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.deck > h2 {
+  align-self: flex-start;
+  font-size: 3rem;
+  text-decoration: underline;
+  color: #ffc220;
+  margin-bottom: 15px;
+}
+
+.deck-item {
+  display: flex;
+  width: 80%;
+  margin-bottom: 15px;
+}
+
+.deck-item > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.deck-item p {
+  font-size: 1.2rem;
+}
+
+.deck-item img {
+  height: 100px;
+}
+
+.total {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  border: 3px solid #ffc220;
+  padding: 10px;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: lightslategray;
+}
